# python-mrz-scanner-sdk

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  MRZ.json  README.md  pyproject.toml  setup.py  setup_setuptools.py  test.py
.github/workflows/: main.yml
examples/camera/: app.py  app_async_api.py
examples/command-line/: app.py
examples/enhanced/: README.md  app.py  combine.py  face_dlib.py  face_mediapipe.py  face_retina.py
examples/official/: README.md  camera.py  file.py  mrz_scanner_gui.py
examples/official/gui/: README.md  mrz_scanner_gui.py  requirements.txt
examples/official/kyc-api/: README.md  app.py  requirements.txt
examples/official/kyc-api/static/: app.js  index.html  styles.css
mrzscanner/: __init__.py  scripts.py
src/: dynamsoft_mrz_reader.h  mrz_result.h  mrzscanner.cpp
